Added open telemetry , dealership working days and fix some bugs feat: Added open telemetry for observability feat: Added dealership working days and handle available slot and book apppointment to reject on non-working day feat: Added migration container to do migration after postgresql container run and exit after migration is done feat: Added ListAppointmentsByCustomerAndDealership to AppointmentRepository to look up for user's appointment on a dealership fix: Fixed in issue where available slot endpoint would produce slot from date-23h30 to next date-00h00
